@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.71 2004/04/22 12:00:05 abs Exp $
+# $NetBSD: Makefile,v 1.72 2004/05/10 17:39:39 abs Exp $
 #
 
-DISTNAME=	cpuflags-0.67
+DISTNAME=	cpuflags-0.68
 CATEGORIES=	sysutils
 MASTER_SITES=	# empty
 DISTFILES=	# empty
